--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "cviebrock/eloquent-sluggable": "^11.0",
+        "dompdf/dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-backup": "^9.1",
+        "spatie/simple-excel": "^3.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
